# Test-1

./: .gitignore  LICENSE  README.md  pyproject.toml  rename.py
.github/workflows/: ci.yml  ci.ymltest0001  ci.ymlttest01
src/autobot/: __init__.py  cli.py  core.py
src/autopilot/: agent.py  cli.py
tests/: test_core.py
